--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-# SANITY_PROJECT_ID=???
-# SANITY_DATASET=staging
-# SANITY_TOKEN=1234ls
+# NEXT_PUBLIC_SANITY_PROJECT_ID=???
+# NEXT_PUBLIC_SANITY_DATASET=staging
+# NEXT_PUBLIC_SANITY_TOKEN=1234ls
 # NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 # CHECKIN_REDIRECT=https://calendar.google.com/...
